# xx_chat

./: README.md
xx_chat_client/: .gitignore  install.bat  xx_chat_client.sln
xx_chat_client/base/: base.vcxproj  base.vcxproj.filters
xx_chat_client/base/src/: base.h  defines.h
xx_chat_client/base/src/network/: base_socket.cpp  event_dispatch.cpp  event_dispatch.h  http_parser_wrapper.cpp  http_parser_wrapper.h  im_conn.cpp  im_conn.h  im_pdu_base.cpp  im_pdu_base.h  net_lib.cpp  net_lib.h  serv_info.cpp  serv_info.h  thread.cpp  thread_pool.cpp  util_pdu.cpp  util_pdu.h
xx_chat_client/base/src/util/: config_file_reader.cpp  file_util.cpp  file_util.h  logger.cpp  logger.h  string_util.cpp  string_util.h  utils.cpp  utils.h
xx_chat_client/xx_chat_client/: xx_chat_client.qrc  xx_chat_client.ui  xx_chat_client.vcxproj  xx_chat_client.vcxproj.filters  xx_chat_client.vcxproj.vspscc
xx_chat_client/xx_chat_client/Resources/qss/: default.qss
xx_chat_client/xx_chat_client/Resources/ui/: friend_chat_dlg.ui  login_win.ui  main_win.ui  xx_chat_client.qrc
xx_chat_client/xx_chat_client/data/: res.xml
xx_chat_client/xx_chat_client/data/res/: res.xml
xx_chat_client/xx_chat_client/data/skins/default/: res.xml  skin.xml  style.css
xx_chat_client/xx_chat_client/src/: data_manager.cpp  data_manager.h  global.cpp  global.h  login_widget.cpp  login_widget.h  main.cpp  main_win.cpp  main_win.h  main_window.cpp  main_window.h  system_tray.cpp  system_tray.h  xx_chat.cpp  xx_chat.h  xx_chat_client.cpp  xx_chat_client.h
xx_chat_client/xx_chat_client/src/chat/: chat_dlg_manager.cpp  chat_dlg_manager.h  friend_chat_dlg.cpp  friend_chat_dlg.h  session_module.cpp  session_module.h
xx_chat_client/xx_chat_client/src/core/: event.cpp  event.h  event_manager.cpp  event_manager.h  http_client.cpp  http_client.h  http_operation.cpp  http_operation.h  http_pool_module.cpp  http_pool_module.h  module_base.cpp  module_base.h  module_observer.cpp  module_observer.h  module_subject.cpp  module_subject.h  operation.cpp  operation.h  operation_manager.cpp  operation_manager.h  tcp_client_module.cpp  tcp_client_module.h
xx_chat_client/xx_chat_client/src/login/: login_http_server_operation.cpp  login_http_server_operation.h  login_module.cpp  login_module.h  login_operation.cpp  login_operation.h  login_win.cpp  login_win.h  relogin_manager.cpp  relogin_manager.h
xx_chat_client/xx_chat_client/src/message/: message_entity.cpp  message_entity.h
xx_chat_client/xx_chat_client/src/skin_engine/: skin_engine.cpp  skin_engine.h
xx_chat_client/xx_chat_client/src/ui/: login_widget.ui  main_window.ui
xx_chat_client/xx_chat_client/src/ui_dialog/basedwidget/: LoadingDialog.cpp  LoadingDialog.h  PopupWidget.cpp  PopupWidget.h  basedstyleshetwidget.cpp  basedstyleshetwidget.h  basedwidget.cpp  basedwidget.h  imagebutton.cpp  imagebutton.h
xx_chat_client/xx_chat_client/src/user_list/: user_list_module.cpp  user_list_module.h
xx_chat_client/xx_chat_client/src/utils/: menu.cpp  menu.h
xx_chat_client/xx_chat_client/ui/: login_win.ui  main_win.ui  xx_chat_client.ui
xx_chat_server/: .gitignore  build.bat  build.sh  install.bat  readme.md
xx_chat_server/db/: db.sql
xx_chat_server/proto/: generate.bat  generate.sh  im.base.proto  im.buddy.proto  im.login.proto  im.message.proto  im.other.proto  im.server.proto
xx_chat_server/src/: CMakeLists.txt
xx_chat_server/src/base/: CMakeLists.txt  base_socket.cpp  base_socket.h  config_file_reader.cpp  config_file_reader.h  defines.h  event_dispatch.cpp  event_dispatch.h  http_parser_wrapper.cpp  im_conn.cpp  im_conn.h  im_pdu_base.cpp  im_pdu_base.h  logger.cpp  logger.h  net_lib.cpp  net_lib.h  serv_info.cpp  stdafx.h  string_util.cpp  string_util.h  task.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  types.h  util_pdu.cpp  util_pdu.h  utils.cpp  utils.h
xx_chat_server/src/db_proxy_server/: CMakeLists.txt  db_pool.cpp  db_pool.h  db_proxy_server.cpp  db_proxy_server.json  handler_map.cpp  handler_map.h  proxy_conn.cpp  proxy_conn.h  proxy_task.cpp  proxy_task.h  stdafx.h
xx_chat_server/src/db_proxy_server/business/: inter_login.cpp  inter_login.h  login.cpp  login.h  login_strategy.h  session.cpp  session.h  user_action.cpp  user_action.h  user_model.cpp  user_model.h
xx_chat_server/src/login_server/: CMakeLists.txt  http_conn.cpp  http_conn.h  login_conn.cpp  login_conn.h  login_server.cpp  login_server.h  login_server.json  stdafx.h
xx_chat_server/src/msg_server/: CMakeLists.txt  attach_data.cpp  attach_data.h  db_server_conn.cpp  db_server_conn.h  im_user.cpp  im_user.h  login_server_conn.cpp  login_server_conn.h  msg_conn.cpp  msg_conn.h  msg_server.cpp  msg_server.json  route_server_conn.cpp  route_server_conn.h  stdafx.h
xx_chat_server/src/net/: acceptor.cpp  acceptor.h  buffer.cpp  buffer.h  callbacks.h  channel.cpp  channel.h  connector.cpp  connector.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  net_address.cpp  net_address.h  poller.cpp  poller.h  poller_epoll.cpp  poller_epoll.h  socket.cpp  socket.h  sockets_ops.cpp  sockets_ops.h  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  time_stamp.cpp  time_stamp.h  z_endian.h
xx_chat_server/src/route_server/: CMakeLists.txt  route_conn.cpp  route_conn.h  route_server.cpp  route_server.json  stdafx.h  user_info.cpp  user_info.h
xx_chat_server/test/: CMakeLists.txt  build.bat  build.sh  client.cpp  client.h  client_conn.cpp  client_conn.h  cmd_thread.cpp  cmd_thread.h  http_client.cpp  http_client.h  main.cpp  stdafx.h
